--- a/Mysite.html
+++ b/Mysite.html
@@ -4,24 +4,36 @@
     <meta charset="UTF-8">
     <title>Ravi</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="/home/helloworld/Desktop/DESKTOP/COURSES/UDEMY-WEB/EXCERCISE/CSS/favicon.ico">
+    <link rel="icon"  href="favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="top-container">
+    <img src="https://media.giphy.com/media/51WwbPgy0bXZdMtVW5/giphy.gif" alt="sun" id="sun"}>
         <img src="cloud.png" id="cloud1" alt="cloud">
         <h1><span>Im Ravi,</span></h1>
         <span id="wo">a Front-End Developer.</span>
     <img src="cloud.png" id="cloud2" alt="cloud">
-        <img src="mountain.png" id="moun" alt="mountain">
+    <img src="mountain.png" id="moun" alt="mountain">
+    <img src="mountain.png" id="moun1" alt="mountain">
+    <img src="mountain.png" id="moun2" alt="mountain">
+    <img src="mountain.png" id="moun3" alt="mountain">
+    <img src="mountain.png" id="moun4" alt="mountain">
+    <img src="https://media.giphy.com/media/gj6eBXKTphg8QfPuX4/giphy.gif" alt="dino" id="dino"}>
     </div>
         <div class="middle-container">
             <div class="profile">
-              <img src="" alt="">
-              <h2>Hello.</h2>
-              <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+              <hr>
+              <h2 id="about">ABOUT ME</h2>
+              <img src="WhatsApp Image 2022-10-16 at 8.10.26 PM-modified.png" id="pfp" alt="pfp">
+        <pre class="info"> 
+          <h2>HEYY !!</h2>
+          My name is Ravi Hitang.
+Im pursuing engineering
+                   at <strong>Canara Engineering College.</strong>
+              </pre>
             </div>
             <hr>
             <div class="skills">
