--- a/Mysite.html
+++ b/Mysite.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ravi</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon"  href="favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="top-container">
@@ -23,45 +25,52 @@
     <img src="mountain.png" id="moun4" alt="mountain">
     <img src="https://media.giphy.com/media/gj6eBXKTphg8QfPuX4/giphy.gif" alt="dino" id="dino"}>
     </div>
+    <hr>
         <div class="middle-container">
             <div class="profile">
-              <hr>
-              <h2 id="about">ABOUT ME</h2>
-              <img src="WhatsApp Image 2022-10-16 at 8.10.26 PM-modified.png" id="pfp" alt="pfp">
-        <pre class="info"> 
-          <h2>HEYY !!</h2>
-          My name is Ravi Hitang.
-Im pursuing engineering
-                   at <strong>Canara Engineering College.</strong>
-              </pre>
+                  <h2 id="about">ABOUT ME</h2>
+                  <img src="WhatsApp Image 2022-10-16 at 8.10.26 PM-modified.png" id="pfp" alt="pfp">
+                  <div class="info">
+                      <p id="hey">Heyy !!😁</p><br>
+                      <p  style=" margin-bottom: 0px; margin-top: 0px;top:0">My name is Ravi Hitang.</p>
+                      <p style=" margin-bottom: 0px;margin-top: 0px;top:0">I'm pursuing engineering at <b>Canara Engineering College.</b></p>
+                      <p style=" margin-bottom: 0px;margin-top: 0px;top:0">Currently I'm learning Front End Web Development</p>
+                      <p  style="margin-top: 0;margin-bottom: 0;">My hobbies are: </p>
+                      <ul style="margin-top: 0;margin-bottom: 0;">
+                         <li>Learning new things.</li>
+                         <li>Playing Football.</li>
+                         <li>Listening to pop songs.</li>
+                         <li>I like food.</li>
+                </ul>
+              </div>
+              <hr id="hr">
             </div>
-            <hr>
             <div class="skills">
-              <h2>My Skills.</h2>
-              <div class="skill-row">
+              <h2 id="skill">My Skills</h2>
+              <span class="skill-row">
                 <img class="" src="" alt="">
-                <h3>Lorem & Ipsum</h3>
-                <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
-              </div>
-              <div class="skill-row">
+                <h3>HTML5</h3>
+                <p></p>
+              </span>
+              <span class="skill-row">
                 <img class="" src="" alt="">
-                <h3>Lorem Ipsum Dolor</h3>
-                <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
-              </div>
+                <h3>C++</h3>
+                <p></p>
+              </span>
             </div>
-            <hr>
+            <hr >
+          </div>
+          <div class="bottom-container">
             <div class="contact-me">
               <h2>Get In Touch</h2>
               <h3>Lorem ipsum dolor sit amet, non elit.</h3>
               <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
               <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
             </div>
-          </div>
-          <div class="bottom-container">
-            <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+            <a class="footer-link" href="https://www.linkedin.com/in/ravi-hitang-155759253">LinkedIn</a>
             <a class="footer-link" href="https://twitter.com/">Twitter</a>
             <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-            <p>© Name Surname.</p>
+            <p>Made with ❤️ by Ravi Hitang...</p>
           </div>
           
 </body>
