--- a/Mysite.html
+++ b/Mysite.html
@@ -46,14 +46,15 @@
               <hr id="hr">
             </div>
             <div class="skills">
-              <h2 id="skill">My Skills</h2>
+              <h2 id="skill">My Skills-</h2>
+              <img src="https://media.giphy.com/media/bx3Cvt88j7PtM4SOaS/giphy.gif" id="skills1" alt="skills">
               <span class="skill-row">
-                <img class="" src="" alt="">
+                <img src="https://media0.giphy.com/media/XAxylRMCdpbEWUAvr8/giphy.gif?cid=6c09b952df3630648a5e67c46a507b67cae437013e71cd6d&rid=giphy.gif&ct=s" id="html5" alt="html5">
                 <h3>HTML5</h3>
                 <p></p>
               </span>
               <span class="skill-row">
-                <img class="" src="" alt="">
+                <img src="https://i.pinimg.com/originals/5c/32/fd/5c32fd59f59c761f549d6e693a47c609.gif" id="cpp" alt="cpp">
                 <h3>C++</h3>
                 <p></p>
               </span>
@@ -62,16 +63,15 @@
           </div>
           <div class="bottom-container">
             <div class="contact-me">
-              <h2>Get In Touch</h2>
-              <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-              <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
-              <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+              <h2><u>Get In Touch</u></h2>
+              <h3>Thanks For Visiting My Page !!❤️</h3>
+              <p></p>
+              <a class="btn" href="mailto:ravihitangofficial25@gmail.com">CONTACT ME</a>
             </div>
             <a class="footer-link" href="https://www.linkedin.com/in/ravi-hitang-155759253">LinkedIn</a>
             <a class="footer-link" href="https://twitter.com/">Twitter</a>
-            <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+            <a class="footer-link" href="https://github.com/ravihitang">Github</a>
             <p>Made with ❤️ by Ravi Hitang...</p>
           </div>
-          
 </body>
 </html>
