added few skills

--- a/Mysite.html
+++ b/Mysite.html
@@ -47,17 +47,19 @@
             </div>
             <div class="skills">
               <h2 id="skill">My Skills-</h2>
+              <p id="par">I love learning new things here are some skills I gained!!</p>
               <img src="https://media.giphy.com/media/bx3Cvt88j7PtM4SOaS/giphy.gif" id="skills1" alt="skills">
-              <span class="skill-row">
-                <img src="https://media0.giphy.com/media/XAxylRMCdpbEWUAvr8/giphy.gif?cid=6c09b952df3630648a5e67c46a507b67cae437013e71cd6d&rid=giphy.gif&ct=s" id="html5" alt="html5">
-                <h3>HTML5</h3>
-                <p></p>
-              </span>
-              <span class="skill-row">
-                <img src="https://i.pinimg.com/originals/5c/32/fd/5c32fd59f59c761f549d6e693a47c609.gif" id="cpp" alt="cpp">
-                <h3>C++</h3>
-                <p></p>
-              </span>
+                <div class="skill-box">
+                  <img src="https://media.giphy.com/media/XAxylRMCdpbEWUAvr8/giphy.gif" id="html5" alt="html5">
+                </div>
+                <div class="skill-box1">
+                  <img src="https://i.pinimg.com/originals/5c/32/fd/5c32fd59f59c761f549d6e693a47c609.gif" id="cpp" alt="cpp">
+                  <h3>C++</h3>
+                </div>
+                <div class="skill-box2">
+                  <img src="https://media.giphy.com/media/w7j1Bivh2hvIbhDYO8/giphy.gif" id="css" alt="css">
+                  <h3>CSS</h3>
+                </div>
             </div>
             <hr >
           </div>
@@ -65,11 +67,9 @@
             <div class="contact-me">
               <h2><u>Get In Touch</u></h2>
               <h3>Thanks For Visiting My Page !!❤️</h3>
-              <p></p>
+            </div> 
               <a class="btn" href="mailto:ravihitangofficial25@gmail.com">CONTACT ME</a>
-            </div>
             <a class="footer-link" href="https://www.linkedin.com/in/ravi-hitang-155759253">LinkedIn</a>
-            <a class="footer-link" href="https://twitter.com/">Twitter</a>
             <a class="footer-link" href="https://github.com/ravihitang">Github</a>
             <p>Made with ❤️ by Ravi Hitang...</p>
           </div>
