positioned the skills

--- a/Mysite.html
+++ b/Mysite.html
@@ -47,18 +47,19 @@
             </div>
             <div class="skills">
               <h2 id="skill">My Skills-</h2>
-              <p id="par">I love learning new things here are some skills I gained!!</p>
+              <p id="par">I love learning new things, here are some skills I gained!!</p>
               <img src="https://media.giphy.com/media/bx3Cvt88j7PtM4SOaS/giphy.gif" id="skills1" alt="skills">
                 <div class="skill-box">
+                  <h3>HTML5</h3>
                   <img src="https://media.giphy.com/media/XAxylRMCdpbEWUAvr8/giphy.gif" id="html5" alt="html5">
                 </div>
                 <div class="skill-box1">
-                  <img src="https://i.pinimg.com/originals/5c/32/fd/5c32fd59f59c761f549d6e693a47c609.gif" id="cpp" alt="cpp">
-                  <h3>C++</h3>
+                  <h3>CSS</h3>
+                  <img src="https://media.giphy.com/media/w7j1Bivh2hvIbhDYO8/giphy.gif" id="css" alt="css">
                 </div>
                 <div class="skill-box2">
-                  <img src="https://media.giphy.com/media/w7j1Bivh2hvIbhDYO8/giphy.gif" id="css" alt="css">
-                  <h3>CSS</h3>
+                  <h3>C++</h3>
+                  <img src="https://i.pinimg.com/originals/5c/32/fd/5c32fd59f59c761f549d6e693a47c609.gif" id="cpp" alt="cpp">
                 </div>
             </div>
             <hr >
